--- a/blocks/leadspace/leadspace.css
+++ b/blocks/leadspace/leadspace.css
@@ -156,7 +156,7 @@ main div.leadspace-wrapper {
 .leadspace.quarter-circle img {
     clip-path: circle(100% at 100% 100%);
     max-height: 335px;
-    margin-bottom: -8px;
+    margin-bottom: -10px;
 }
 
 /* Button Group */
